--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,71 @@
+annotated-types==0.7.0
+anyio==4.10.0
+asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.116.1
+fastapi-cli==0.0.8
+fastapi-cloud-cli==0.1.5
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+opentelemetry-api==1.36.0
+opentelemetry-distro==0.57b0
+opentelemetry-exporter-otlp==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-exporter-otlp-proto-http==1.36.0
+opentelemetry-instrumentation==0.57b0
+opentelemetry-instrumentation-asgi==0.57b0
 opentelemetry-instrumentation-asyncio==0.57b0
 opentelemetry-instrumentation-dbapi==0.57b0
+opentelemetry-instrumentation-grpc==0.57b0
 opentelemetry-instrumentation-logging==0.57b0
+opentelemetry-instrumentation-requests==0.57b0
 opentelemetry-instrumentation-sqlite3==0.57b0
 opentelemetry-instrumentation-threading==0.57b0
 opentelemetry-instrumentation-urllib==0.57b0
-opentelemetry-instrumentation-wsgi==0.57b0
-opentelemetry-instrumentation-asgi==0.57b0
-opentelemetry-instrumentation-grpc==0.57b0
-opentelemetry-instrumentation-requests==0.57b0
 opentelemetry-instrumentation-urllib3==0.57b0
+opentelemetry-instrumentation-wsgi==0.57b0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
+opentelemetry-util-http==0.57b0
+packaging==25.0
+protobuf==6.31.1
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+python-dotenv==1.1.1
+python-multipart==0.0.20
+PyYAML==6.0.2
+requests==2.32.4
+rich==14.1.0
+rich-toolkit==0.15.0
+rignore==0.6.4
+sentry-sdk==2.34.1
+shellingham==1.5.4
+sniffio==1.3.1
+starlette==0.47.2
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
+wrapt==1.17.2
+zipp==3.23.0
